--- a/.github/workflows/deploy-y.yaml
+++ b/.github/workflows/deploy-y.yaml
@@ -1,20 +1,15 @@
-# This workflow will build a docker container, publish it to Azure Container Registry, and deploy it to Azure Kubernetes Service.
-#
-# To configure this workflow:
-#
-# 1. Set up the following secrets in your workspace: 
-#     a. REGISTRY_USERNAME with ACR username
-#     b. REGISTRY_PASSWORD with ACR Password
-#     c. AZURE_CREDENTIALS with the output of `az ad sp create-for-rbac --sdk-auth`
-#
-# 2. Change the values for the REGISTRY_NAME, CLUSTER_NAME, CLUSTER_RESOURCE_GROUP and NAMESPACE environment variables (below).
-
 on: [push]
 
 permissions:
   id-token: write  # Allow GitHub Actions to request an ID token
   contents: read   # Allow reading repository contents
 # Environment variables available to all jobs and steps in this workflow
+env:
+  REGISTRY_NAME: kubereg12
+  CLUSTER_NAME: aks-cluster-my
+  CLUSTER_RESOURCE_GROUP: kube
+  NAMESPACE: aks-pj
+  IMAGE_NAME: pj-app
   
 jobs:
   build:
@@ -36,3 +31,15 @@ jobs:
         client-secret: ${{ secrets.AZURE_AD_CLIENT_SECRET }}
         tenant-id: ${{ secrets.AZURE_AD_TENANT_ID }}
         subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+         # Connect to Azure Container registry (ACR)
+    - uses: azure/docker-login@v1
+      with:
+        login-server: ${{ env.REGISTRY_NAME }}.azurecr.io
+        username: ${{ secrets.REGISTRY_USERNAME }} 
+        password: ${{ secrets.REGISTRY_PASSWORD }}
+    
+    # Container build and push to a Azure Container registry (ACR)
+    - run: |
+        docker build . -t ${{ env.REGISTRY_NAME }}.azurecr.io/{{ env.IMAGE_NAME }}:${{ github.sha }}
+        docker push ${{ env.REGISTRY_NAME }}.azurecr.io/{{ env.IMAGE_NAME }}:${{ github.sha }}
+    
