--- a/.github/workflows/deploy-y.yaml
+++ b/.github/workflows/deploy-y.yaml
@@ -61,8 +61,8 @@ jobs:
         ARM_CLIENT_SECRET: ${{ secrets.AZURE_AD_CLIENT_SECRET }}
         ARM_TENANT_ID: ${{ secrets.AZURE_AD_TENANT_ID }}
         ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-
-    -name: "Terraform Import"
+    
+    -name: "Terraform Import Resource Group"
       id: import
       run: terraform import azurerm_resource_group.r-grp /subscriptions/${{ secrets.AZURE_SUBSCRIPTION_ID }}/resourceGroups/kube
       working-directory: terraform
