--- a/.github/workflows/deploy-y.yaml
+++ b/.github/workflows/deploy-y.yaml
@@ -83,10 +83,10 @@ jobs:
       with:
         cluster-name: ${{ env.CLUSTER_NAME }}
         resource-group: ${{ env.CLUSTER_RESOURCE_GROUP }}
-        clientId: ${{ secrets.AZURE_AD_CLIENT_ID }}
-        clientSecret: ${{ secrets.AZURE_AD_CLIENT_SECRET }}
-        subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-        tenantId: ${{ secrets.AZURE_AD_TENANT_ID }}
+        client-id: ${{ secrets.AZURE_AD_CLIENT_ID }}
+        client-secret: ${{ secrets.AZURE_AD_CLIENT_SECRET }}
+        tenant-id: ${{ secrets.AZURE_AD_TENANT_ID }}
+        subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
         
       env:
         REGISTRY_NAME: kubereg12
